--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,4 +17,9 @@ jobs:
           base_uri: https://eu.ast.checkmarx.net 
           cx_client_id: ${{ secrets.CX_CLIENT_ID }}
           cx_client_secret: ${{ secrets.CX_CLIENT_SECRET }}
-          additional_params: --scan-types sast --threshold "sast-high=1" --filter severity "high"
+          additional_params: >-
+            --scan-types sast
+            --filter severity "High"
+            --threshold sast-high=1
+            --sast-preset-name "High"
+          
