--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,4 +17,4 @@ jobs:
           base_uri: https://eu.ast.checkmarx.net 
           cx_client_id: ${{ secrets.CX_CLIENT_ID }}
           cx_client_secret: ${{ secrets.CX_CLIENT_SECRET }}
-          additional_params: --threshold "sast-high=1" --scan-types sast --file-filter '!.html', '!.txt', '!.versionsBackup', '!.spec.js', '!.png', '!.jpg', '!.svg', '!.gif', '!.tf', '!.font', '!.DS_Store', '!.class', '!.jar', '!.mp3', '!.mp4', '!.iff', '!apidocs.json', '!*.gitmodules'
+          additional_params: --threshold "sast-high=1" --scan-types sast --file-filter '!CSRFIntegrationTest.java'
