--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,4 +17,5 @@ jobs:
           base_uri: https://eu.ast.checkmarx.net 
           cx_client_id: ${{ secrets.CX_CLIENT_ID }}
           cx_client_secret: ${{ secrets.CX_CLIENT_SECRET }}
-          additional_params: --threshold "sast-high=40" --scan-types sast --incremental 'True' --file-filter '!CSRFIntegrationTest.java'
+          incremental: 'true'
+          additional_params: --threshold "sast-high=40" --scan-types sast --file-filter '!CSRFIntegrationTest.java'
