--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,4 +17,4 @@ jobs:
           base_uri: https://eu.ast.checkmarx.net 
           cx_client_id: ${{ secrets.CX_CLIENT_ID }}
           cx_client_secret: ${{ secrets.CX_CLIENT_SECRET }}
-          additional_params: --scan-types sca --file-filter '!*.CSRFIntegrationTest.java'
+          additional_params: --scan-types sast, sca --file-filter '!*.CSRFIntegrationTest.java'
